Changing size of clickable area for expand arrow icon + unit testing

Users should be able to bring up the full app list view by touching any
area near the expand arrow icon.

Bug: 906858
Change-Id: I4c39ddbbeb2bf6b7ac529aa758d161f54e67d8a6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1652619
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Cameron Womack <camw@google.com>
Cr-Commit-Position: refs/heads/master@{#668571}

Former-commit-id: aa3310b161d8c82cb4b29caecbcb9eb4ef8b6ef3